# rocket-pastebin

./: .gitignore  Cargo.toml  README.md
src/: main.rs  paste_id.rs  routes.rs  tests.rs
templates/: index.html.hbs
