[package]
name = "rocket-pastebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1" }
rocket_dyn_templates =  {  version = "0.1.0-rc.1", features = [ "handlebars" ] }
rand = { version = "0.8.4" }